// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/ButtonLink should render and match snapshot 1`] = `
<main
  className="container main"
>
  some text
</main>
`;

exports[`components/ButtonLink should render without children and match snapshot  1`] = `
<main
  className="container main"
/>
`;
